# GoLinking

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  build.ps1  compile_cpp.bat
UwpHost/: App.cpp  CMakeLists.txt  Package.appxmanifest  pch.h
UwpHost/AppxLayout/: AppxManifest.xml
cpp/: main.cpp
go_dll/: go.mod  go.sum  main.go
golib/: go.mod  golib.go
purego_winrt/: README.md  build.ps1
purego_winrt/cpp_dll/: dllmain.cpp  winrt_exports.cpp
purego_winrt/gomain/: go.mod  main.go
